--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       position: absolute;
       transition: transform 0.3s;
       cursor: pointer;
+      border: 4px solid rgb(133, 127, 145); /* You can change the color and thickness */
+  border-radius: 10px; /* Optional: Rounds the edges of the border */
     }
 
     .text-link {
