--- a/who.html
+++ b/who.html
@@ -1,6 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <header>
+    <div class="header-left">
+      <img src="porch-couch-logo.jpg" alt="Porch Couch Logo" class="logo" />
+      <span class="brand-text">PORCH COUCH</span>
+    </div>
+    <div class="header-right">
+      <nav>
+        <a href="index.html">HOME</a>
+        <a href="tour.html">TOUR</a>
+        <a href="shop.html">SHOP</a>
+        <a href="who.html">ABOUT</a>
+      </nav>
+      <div class="social-icons">
+        <a href="https://instagram.com/jaronfreemanfox" target="_blank">
+          <img src="instagram.svg" alt="Instagram" />
+        </a>
+        <a href="https://instagram.com/_alan_mackie" target="_blank">
+          <img src="instagram.svg" alt="Instagram" />
+        </a>
+        <a href="https://open.spotify.com/" target="_blank">
+          <img src="spotify.svg" alt="Spotify" />
+        </a>
+        <a href="mailto:porchcoucholdtime@gmail.com">
+          <img src="mailto.svg" alt="Email" />
+        </a>
+      </div>
+    </div>
+  </header>
+  
+  <style>
+    header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      background-color: rgb(17, 15, 15);
+      padding: 10px 20px;
+      color: white;
+      font-family: sans-serif;
+      margin-bottom: 20px; /* Adds space below the header */
+    }
+  
+    /* Left side with logo + text */
+    .header-left {
+      display: flex;
+      align-items: center;
+    }
+  
+    /* Logo styling */
+    .header-left .logo {
+      width: 150px; /* Adjust as needed */
+      height: auto;
+      margin-right: 10px;
+    }
+  
+    /* Brand text styling */
+    .brand-text {
+      font-size: 24px;
+      font-weight: bold;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+    }
+  
+    /* Right side with nav + social icons */
+    .header-right {
+      display: flex;
+      align-items: center;
+    }
+  
+    /* Navigation links */
+    header nav a {
+      color: white;
+      text-decoration: none;
+      margin-left: 15px;
+      font-size: 17px;
+      transition: color 0.3s ease;
+    }
+    header nav a:hover {
+      text-decoration: underline;
+    }
+  
+    /* Social icons row */
+    .social-icons {
+      display: flex;
+      align-items: center;
+      margin-left: 20px;
+    }
+    .social-icons a {
+      margin-left: 10px;
+    }
+    .social-icons img {
+      width: 20px;
+      height: 20px;
+      display: inline-block;
+      filter: invert(1); /* Inverts the colors of the SVG */
+    }
+  </style>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>ABOUT - Porch Couch</title>
