--- a/who.html
+++ b/who.html
@@ -5,9 +5,7 @@
       <a href="index.html" class="brand-text">PORCH COUCH</a>
     </div>
     <div class="header-right">
-      <div class="hamburger" onclick="toggleMenu()">
-        &#9776; <!-- Hamburger icon -->
-      </div>
+      <div class="hamburger" onclick="toggleMenu()">&#9776;</div> <!-- Hamburger icon -->
       <nav id="mobileMenu">
         <a href="music.html">MUSIC</a>
         <a href="tour.html">TOUR</a>
@@ -41,6 +39,13 @@
       color: white;
       font-family: sans-serif;
       margin-bottom: 20px;
+    }
+  
+    /* Navigation links and social icons container */
+    .header-right {
+      display: flex;
+      align-items: center;
+      gap: 20px; /* Adds spacing between the nav and social icons */
     }
   
     /* Navigation links */
@@ -84,7 +89,7 @@
     @media (max-width: 768px) {
       .header-right {
         flex-direction: column; /* Stack the nav and icons vertically */
-        align-items: flex-start; /* Align items to the left */
+        align-items: flex-end; /* Align items to the right */
       }
   
       header nav {
@@ -93,7 +98,7 @@
         background-color: rgba(0, 0, 0, 0.8);
         position: absolute;
         top: 60px;
-        right: 20px;
+        right: 0; /* Align the menu to the right side of the page */
         padding: 10px;
         border-radius: 5px;
         z-index: 1000; /* Ensure the menu is above other elements */
@@ -102,6 +107,7 @@
       header nav a {
         margin: 5px 0;
         font-size: 18px;
+        text-align: right; /* Align links to the right */
       }
   
       .hamburger {
@@ -154,9 +160,9 @@
   /* Adjust the text box for smaller screens */
   @media (max-width: 768px) {
     .text-box {
-      width: 100%; /* Make the text box take up the full width */
+      width: 90%; /* Make the text box take up the full width */
       left: 0; /* Align it to the left edge */
-      right: 5%; /* Align it to the left edge */
+      right: 0; /* Align it to the left edge */
       top: 20%; /* Adjust the top position for better spacing */
       border-radius: 0; /* Remove rounded corners for a cleaner look */
     }
