--- a/who.html
+++ b/who.html
@@ -167,7 +167,7 @@
       border-radius: 0; /* Remove rounded corners for a cleaner look */
     }
   }
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </style>
 <script>
   function toggleMenu() {
