--- a/who.html
+++ b/who.html
@@ -167,6 +167,7 @@
       border-radius: 0; /* Remove rounded corners for a cleaner look */
     }
   }
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </style>
 <script>
