--- a/tour.html
+++ b/tour.html
@@ -304,6 +304,12 @@
 <body>
     <div class="text-container">
       <p style="font-size: 24px; text-align: center; margin-right: 20px;">
+        June 5 - Toronto, ON - 
+        <a href="https://www.dromtaberna.com/events-9O8Cm" target="_blank" style="color: rgb(249, 249, 249); text-decoration: underline;">
+          Drom Taberna
+        </a>
+        <br>
+        <br>
         June 18 - Toronto, ON - 
         <a href="https://www.instagram.com/thebellandbeacon/?hl=en" target="_blank" style="color: rgb(249, 249, 249); text-decoration: underline;">
           The Bell and Beacon
