--- a/music.html
+++ b/music.html
@@ -15,13 +15,10 @@
             <a href="who.html">ABOUT</a>
           </nav>
           <div class="social-icons">
-            <a href="https://instagram.com/jaronfreemanfox" target="_blank">
+            <a href="https://instagram.com/porchcouccccc" target="_blank">
               <img src="instagram.svg" alt="Instagram" />
             </a>
-            <a href="https://instagram.com/_alan_mackie" target="_blank">
-              <img src="instagram.svg" alt="Instagram" />
-            </a>
-            <a href="https://open.spotify.com/" target="_blank">
+            <a href="https://open.spotify.com/track/5FdJ8bYH3E9E3Gs4lDcygV?si=c601f5aa4b124c59" target="_blank">
               <img src="spotify.svg" alt="Spotify" />
             </a>
             <a href="mailto:porchcoucholdtime@gmail.com">
@@ -209,11 +206,12 @@
 </head>
 <body> 
   <div style="text-align: center; margin-top: 20px;">
-    <p 
-      style="font-size: 24px; margin-bottom: 10px; cursor: pointer; display: inline-block; background-color: rgba(0, 0, 0, 0.5); color: white; padding: 10px 20px; border-radius: 10px;" 
-      onclick="toggleAudio()">
-      click me for a secret twang
-    </p>
+    <a 
+  href="https://share.amuse.io/h9VZXy_oBJwF" 
+  target="_blank" 
+  style="font-size: 24px; margin-bottom: 10px; display: inline-block; background-color: rgba(0, 0, 0, 0.5); color: white; padding: 10px 20px; border-radius: 10px; text-decoration: none;">
+  bb's first single
+</a>
     <div id="audioPlayer" style="display: none; margin-top: 10px;">
       <audio controls>
         <source src="Silver_Lake_3.11.2026.mp3" type="audio/mpeg">
@@ -226,7 +224,7 @@
     <p 
       style="font-size: 24px; margin-bottom: 10px; cursor: pointer; display: inline-block; background-color: rgba(0, 0, 0, 0.5); color: white; padding: 10px 20px; border-radius: 10px;" 
       onclick="openVideoModal()">
-      click me to see the scene of the crime
+      the scene of the crime
     </p>
   </div>
   
