--- a/shop.html
+++ b/shop.html
@@ -15,13 +15,10 @@
           <a href="who.html">ABOUT</a>
         </nav>
         <div class="social-icons">
-          <a href="https://instagram.com/jaronfreemanfox" target="_blank">
+          <a href="https://instagram.com/porchcouccccc" target="_blank">
             <img src="instagram.svg" alt="Instagram" />
           </a>
-          <a href="https://instagram.com/_alan_mackie" target="_blank">
-            <img src="instagram.svg" alt="Instagram" />
-          </a>
-          <a href="https://open.spotify.com/" target="_blank">
+          <a href="https://open.spotify.com/track/5FdJ8bYH3E9E3Gs4lDcygV?si=c601f5aa4b124c59" target="_blank">
             <img src="spotify.svg" alt="Spotify" />
           </a>
           <a href="mailto:porchcoucholdtime@gmail.com">
@@ -348,7 +345,14 @@
     <img src="papers.gif" alt="Papers GIF" class="thumbnail" />
   </div>
 </div>
-      <div class="item-row">Couch Shirts - SOLD OUT ☹️</div>
+<div class="gif-thumbnails">
+  <div class="thumbnail-container" data-hover-text="Couch Shirts - SOLD OUT ☹️">
+    <img src="Shirt.gif" alt="Shirt GIF" class="thumbnail" />
+  </div>
+  <div class="thumbnail-container" data-hover-text="Couch Shirts - SOLD OUT ☹️">
+    <img src="shirt2.gif" alt="Shirt 2 GIF" class="thumbnail" />
+  </div>
+</div>
       <div class="item-row">
   <div class="thumbnail-container" data-hover-text="Ear Bling - $15 🥳">
     <img src="earrings1.JPG" alt="Earrings 1" class="thumbnail" onclick="viewImage(this.src)" />
