--- a/who.html
+++ b/who.html
@@ -13,13 +13,10 @@
         <a href="who.html">ABOUT</a>
       </nav>
       <div class="social-icons">
-        <a href="https://instagram.com/jaronfreemanfox" target="_blank">
+        <a href="https://instagram.com/porchcouccccc" target="_blank">
           <img src="instagram.svg" alt="Instagram" />
         </a>
-        <a href="https://instagram.com/_alan_mackie" target="_blank">
-          <img src="instagram.svg" alt="Instagram" />
-        </a>
-        <a href="https://open.spotify.com/" target="_blank">
+        <a href="https://open.spotify.com/album/71x0AWkRakcaNLOt51SPoH?si=V4Sk56zNRLaV6tY5tFezFg" target="_blank">
           <img src="spotify.svg" alt="Spotify" />
         </a>
         <a href="mailto:porchcoucholdtime@gmail.com">
